@@ -1,3 +1,9 @@
+2007-05-22  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_path.c (Cairo::PathMoveTo, Cairo::PathLineTo,
+	Cairo::PathCurveTo, Cairo::PathClosePath): defined each path data
+	type as class.
+
 2007-05-21  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_matrix.c (Cairo::Matrix#transform_distance): fixed
